--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -14,6 +14,7 @@ body {
   line-height: 1.7;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overscroll-behavior-y: contain;
 }
 
 img, picture, video, canvas, svg {
